fix: convert WorkoutSession to record, fix ValidationService, fix i18n classpath